infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${K8S_NAMESPACE}
  labels:
    project: ${NAME_PREFIX}
